syntax = 'proto3';

service Users {
  rpc GetAll (Empty) returns (UsersResponseList) {}
  rpc Get (UsersRequestId) returns (UsersResponse) {}
  rpc Insert (UsersInsertRequest) returns (UsersResponse) {}
  rpc Update (UsersUpdateRequest) returns (UsersResponse) {}
  rpc Remove (UsersRequestId) returns (Empty) {}
  rpc Login (UsersLoginRequest) returns (UsersResponse){}
}

message Empty {}

message UsersInsertRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message UsersLoginRequest {
  string username = 1;
  string password = 2;
}

message UsersUpdateRequest {
  string id = 1;
  string username = 2;
  string password = 3;
  string email = 4;
}

message UsersRequestId {
  string id = 1;
}

message UsersResponse {
  string id = 1;
  string username = 2;
  string email = 3;
}

message UsersResponseList {
  repeated UsersResponse usersResponseList = 1;
}